--- a/package.json
+++ b/package.json
@@ -34,16 +34,18 @@
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "toastify-react-native": "^7.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
